# hfmetal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
benchmarks/: CMakeLists.txt
benchmarks/cpu/: bench_linalg.cpp  bench_ols.cpp  bench_realized.cpp  bench_returns.cpp
benchmarks/rolling/: bench_rolling_ols.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  MetalSupport.cmake  Packaging.cmake  Sanitizers.cmake
examples/: CMakeLists.txt
examples/cpp/: basic_usage.cpp  comprehensive_example.cpp  event_study_example.cpp  ols_example.cpp  spy_mgarch_rolling.cpp
include/hfm/: hfm.hpp  hfmetal.hpp
include/hfm/core/: assert.hpp  numeric_traits.hpp  status.hpp  types.hpp
include/hfm/covariance/: covariance.hpp
include/hfm/data/: series.hpp  timestamp.hpp
include/hfm/diagnostics/: statistical_tests.hpp
include/hfm/estimators/: batched_ols.hpp  gls.hpp  iv.hpp  ols.hpp  rolling_ols.hpp
include/hfm/hf/: event_study.hpp  realized_measures.hpp  returns.hpp
include/hfm/linalg/: decompositions.hpp  matrix.hpp  solver.hpp  vector.hpp
include/hfm/metal/: metal_context.hpp
include/hfm/models/: egarch.hpp  fama_macbeth.hpp  garch.hpp  garch_t.hpp  gjr_garch.hpp  logit_probit.hpp
include/hfm/panel/: fixed_effects.hpp
include/hfm/risk/: measures.hpp
include/hfm/runtime/: execution_planner.hpp  thread_pool.hpp
include/hfm/simulation/: bootstrap.hpp  mcmc.hpp
include/hfm/timeseries/: ar.hpp  arima.hpp  granger.hpp  har.hpp  irf.hpp  local_projections.hpp  rolling.hpp  var.hpp
python/: CMakeLists.txt  module.cpp
python/examples/: quickstart.py
python/hfmetal/: __init__.py
shaders/: batched_ols.metal  bootstrap.metal  event_study.metal  garch.metal  likelihoods.metal  matvec.metal  realized_measures.metal  reductions.metal  returns.metal  rolling.metal
src/covariance/: covariance.cpp
src/data/: timestamp.cpp
src/diagnostics/: statistical_tests.cpp
src/estimators/: batched_ols.cpp  gls.cpp  iv.cpp  ols.cpp  rolling_ols.cpp
src/hf/: event_study.cpp  realized_measures.cpp  returns.cpp
src/linalg/: decompositions.cpp  solver.cpp
src/metal/: metal_context.mm
src/models/: egarch.cpp  fama_macbeth.cpp  garch.cpp  garch_t.cpp  gjr_garch.cpp  logit_probit.cpp
src/panel/: fixed_effects.cpp
src/risk/: measures.cpp
src/runtime/: execution_planner.cpp  thread_pool.cpp
src/simulation/: bootstrap.cpp  mcmc.cpp
src/timeseries/: ar.cpp  arima.cpp  granger.cpp  har.cpp  irf.cpp  local_projections.cpp  rolling.cpp  var.cpp
tests/: CMakeLists.txt
tests/integration/: bench_arch_vs_hfm.py  test_10etf_mgarch.py  test_real_data.py  test_spy_mgarch.py
tests/metal/: test_metal_context.cpp  test_metal_returns.cpp
tests/unit/: test_arima.cpp  test_batched_ols.cpp  test_bootstrap.cpp  test_clustered_cov.cpp  test_core.cpp  test_covariance.cpp  test_decompositions.cpp  test_diagnostics.cpp  test_event_study.cpp  test_execution_planner.cpp  test_fama_macbeth.cpp  test_garch.cpp  test_gls.cpp  test_granger.cpp  test_irf.cpp  test_iv.cpp  test_local_projections.cpp  test_logit_probit.cpp  test_matrix.cpp  test_mcmc.cpp  test_ols.cpp  test_panel.cpp  test_realized_measures.cpp  test_returns.cpp  test_risk.cpp  test_rolling_ols.cpp  test_series.cpp  test_timeseries.cpp  test_timestamp.cpp  test_var.cpp  test_vector.cpp  test_volatility_models.cpp
